--- a/magento-theme/src/sass/variables/_variables.scss
+++ b/magento-theme/src/sass/variables/_variables.scss
@@ -1,3 +1,7 @@
+// Namespace/Prefix
+$prefix: "cm-";
+$page:   "page-";
+
 // Breakpoints
 $breakpoints: (
         "xs": "only screen and (max-width: 599px)",
